# ea_cpp_modern

./: .clang-format  .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CMakeLists.txt  Doxyfile  Makefile  NEXT_SESSION.md  README.md  REVIEW.md  TODO.md  paper.aux  paper.md  paper.out  paper.tex  test_compile  test_replacement  zdt1_front.csv
.github/workflows/: ci.yml  regression.yml
benchmarks/: README.md  bench_arch  bench_arch_comparison.cpp  bench_comparison  bench_current  bench_original_comparison.cpp  bench_timer.hpp  bench_v1_vs_current.cpp
benchmarks/jmetal/: JMetalAGEMOEABenchmark.java  JMetalGDE3Benchmark.java  JMetalIBEABenchmark.java  JMetalLZ09Benchmark.java  JMetalMOCellBenchmark.java  JMetalMOEADBenchmark.java  JMetalNSGA2Benchmark.java  JMetalNSGA3Benchmark.java  JMetalPAESBenchmark.java  JMetalSMPSOBenchmark.java  JMetalSMSEMOABenchmark.java  JMetalSPEA2Benchmark.java  JMetalUFBenchmark.java  JMetalWFGBenchmark.java
examples/: agemoea_runner.cpp  benchmark.cpp  benchmark_extended.cpp  benchmark_fair.cpp  benchmark_large.cpp  benchmark_precise.cpp  config_example.cpp  config_nsga2.json  config_rvea.json  gde3_runner.cpp  ibea_runner.cpp  island_model_example.cpp  lz09_runner.cpp  mocell_runner.cpp  moead_runner.cpp  mu_lambda_runner.cpp  nsga2_runner.cpp  nsga2_zdt1.cpp  nsga3_runner.cpp  paes_profile.cpp  paes_runner.cpp  smpso_runner.cpp  smsemoa_runner.cpp  spea2_runner.cpp  test_random_search.cpp  test_spread.cpp  uf_runner.cpp  wfg_runner.cpp
include/ea/: ea.hpp
include/ea/algorithm/: agemoea.hpp  gde3.hpp  ibea.hpp  mocell.hpp  moead.hpp  moead_de.hpp  mu_lambda_es.hpp  nsga2.hpp  nsga3.hpp  paes.hpp  random_search.hpp  rvea.hpp  smpso.hpp  smsemoa.hpp  spea2.hpp
include/ea/core/: comparator.hpp  concepts.hpp  config.hpp  encoding.hpp  factory.hpp  factory_types.hpp  population.hpp  registry.hpp
include/ea/indicator/: epsilon.hpp  gd.hpp  hausdorff.hpp  hypervolume.hpp  igd.hpp  r2.hpp  spread.hpp
include/ea/problem/: uf.hpp  (+5 more)
results/: README.md
scripts/: analyze_mo_comparison.py  analyze_so_comparison.py  benchmark_all.sh  benchmark_suite.cpp  estimate_energy.sh  run_agemoea_comparison.sh  run_gde3_comparison.sh  run_ibea_comparison.sh  run_lz09_comparison.sh  run_mo_comparison.sh  run_mocell_comparison.sh  run_moead_comparison.sh  run_nsga2_comparison.sh  run_nsga3_comparison.sh  run_paes_comparison.sh  run_smpso_comparison.sh  run_smsemoa_comparison.sh  run_so_comparison.sh  run_spea2_comparison.sh  run_uf_comparison.sh  run_wfg_comparison.sh
tests/integration/: test_island_model.cpp
tests/regression/: test_zdt1_regression.sh
tests/unit/: test_compile.cpp  test_concepts.cpp  test_moead.cpp  test_nary_tournament.cpp  test_new_algorithms.cpp  test_new_algorithms_compile.cpp  test_new_operators.cpp  test_nsga3_run.cpp  test_operators.cpp  test_problems.cpp  test_replacement.cpp  test_seed_manager.cpp  test_selection.cpp  test_stats_collector.cpp
(+73 files in other folders)
